[gd_scene load_steps=12 format=3 uid="uid://cmrolnqpu52u8"]

[ext_resource type="Script" uid="uid://dtojt2bfjiv8i" path="res://BrainVisualizer/UI/Windows/CreateRegion/WindowCreateRegion.gd" id="1_bf8xt"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://BrainVisualizer/UI/GenericElements/TitleBar/TitleBar.tscn" id="2_xhweg"]
[ext_resource type="Script" uid="uid://balvp4h3lg0j" path="res://BrainVisualizer/UI/GenericElements/DropDown/RegionDropDown.gd" id="3_16rxf"]
[ext_resource type="Script" uid="uid://dg0vj5dqxb606" path="res://BrainVisualizer/UI/GenericElements/TextBoxes/TextInput.gd" id="3_yyqls"]
[ext_resource type="PackedScene" uid="uid://ci8uvawjvxfax" path="res://BrainVisualizer/UI/GenericElements/Vectors/Vector3iSpinBoxField.tscn" id="4_whcst"]
[ext_resource type="Texture2D" uid="uid://b4jkpvgo7fes3" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_S.png" id="5_l1778"]
[ext_resource type="Script" uid="uid://dfllqleqyhqy4" path="res://BrainVisualizer/UI/GenericElements/Buttons/ButtonTextureRectScaling.gd" id="6_jyl4e"]
[ext_resource type="Texture2D" uid="uid://dm7j5k1l27tvy" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_C.png" id="7_2mkb4"]
[ext_resource type="Texture2D" uid="uid://btuaycki4ux0h" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_H.png" id="8_87g4j"]
[ext_resource type="Texture2D" uid="uid://df4tfd8cxsr4c" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_D.png" id="9_vy0mh"]
[ext_resource type="PackedScene" uid="uid://b4cfpdwwgj8q8" path="res://BrainVisualizer/UI/GenericElements/Scroll/ScrollGeneric/ScrollSectionGeneric.tscn" id="10_d4k8w"]

[node name="WindowCreateRegion" type="VBoxContainer"]
offset_right = 468.0
offset_bottom = 293.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("1_bf8xt")

[node name="TitleBar" parent="." instance=ExtResource("2_xhweg")]
layout_mode = 2
title = "Create Brain Region"

[node name="WindowPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="WindowMargin" type="MarginContainer" parent="WindowPanel"]
layout_mode = 2
theme_type_variation = &"MarginContainer_WindowBorder"

[node name="WindowInternals" type="VBoxContainer" parent="WindowPanel/WindowMargin"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2

[node name="Label" type="Label" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Parent Region"

[node name="RegionDropDown" type="OptionButton" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("3_16rxf")

[node name="HBoxContainer" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2

[node name="Label" type="Label" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Region Name"

[node name="TextInput" type="LineEdit" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("3_yyqls")

[node name="HBoxContainer2" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2

[node name="Label" type="Label" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "3D Position"

[node name="Vector3fField" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer2" instance=ExtResource("4_whcst")]
layout_mode = 2

[node name="ScrollSectionGenericTemplate" type="VBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals/ScrollSectionGenericTemplate"]
layout_mode = 2

[node name="Label" type="Label" parent="WindowPanel/WindowMargin/WindowInternals/ScrollSectionGenericTemplate/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Define Internals"

[node name="Add" type="TextureRect" parent="WindowPanel/WindowMargin/WindowInternals/ScrollSectionGenericTemplate/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_l1778")
expand_mode = 3
script = ExtResource("6_jyl4e")
texture_normal = ExtResource("5_l1778")
texture_pressed = ExtResource("7_2mkb4")
texture_hover = ExtResource("8_87g4j")
texture_disabled = ExtResource("9_vy0mh")

[node name="PanelContainer" type="PanelContainer" parent="WindowPanel/WindowMargin/WindowInternals/ScrollSectionGenericTemplate"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollSectionGeneric" parent="WindowPanel/WindowMargin/WindowInternals/ScrollSectionGenericTemplate/PanelContainer" instance=ExtResource("10_d4k8w")]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2

[node name="Label" type="Control" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer4"]
layout_mode = 2
theme_type_variation = &"Button_big"
text = "Create"

[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/ScrollSectionGenericTemplate/HBoxContainer/Add" to="." method="_add_button_pressed"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/HBoxContainer4/Button" to="." method="_create_region_button_pressed"]
